--- a/crispv2_1/requirements_new.txt
+++ b/crispv2_1/requirements_new.txt
@@ -1,4 +1,4 @@
-albumentations==2.0.5
+albumentations==1.3.1
 altair==5.0.1
 attrs==24.2.0
 backports.zoneinfo==0.2.1
@@ -13,15 +13,15 @@ fonttools==4.38.0
 future==1.0.0
 gitdb==4.0.12
 GitPython==3.1.44
-google-api-core==2.24.2
-google-auth==2.38.0
-google-auth-oauthlib==0.5.1
-google-cloud==0.34.0
-google-cloud-core==2.3.0
-google-cloud-storage==2.3.0
-google-crc32c==1.3.0
-google-resumable-media==2.3.2
-googleapis-common-protos==1.56.0
+google-api-core
+google-auth
+google-auth-oauthlib
+google-cloud
+google-cloud-core
+google-cloud-storage
+google-crc32c
+google-resumable-media
+googleapis-common-protos
 idna==3.10
 imageio==2.31.2
 importlib-metadata==6.7.0
@@ -45,7 +45,7 @@ Pillow==9.5.0
 pkgutil_resolve_name==1.3.10
 plotly==5.7.0
 proto-plus==1.26.1
-protobuf==3.20.1
+protobuf
 pyarrow==12.0.1
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
@@ -58,7 +58,6 @@ python-dateutil==2.9.0.post0
 pytz==2025.1
 pytz-deprecation-shim==0.1.0.post0
 PyWavelets==1.3.0
-pywin32==308
 requests==2.31.0
 requests-oauthlib==2.0.0
 rich==13.8.1
